sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:8: error: not found: value ecart
  for(i<- ecart to getTaille()-1){
          ^DutchFlagAlgo:11: error: missing arguments for method getCouleur in class DutchFlagEntity;
follow this method with `_' if you want to treat it as a partially applied function
    if(getCouleur(i)= Color.BLUE){
       ^DutchFlagAlgo:19: error: missing arguments for method getCouleur in class DutchFlagEntity;
follow this method with `_' if you want to treat it as a partially applied function
    if(getCouleur(i)= Color.WHITE){
       ^